src/test/ui/resolve/token-error-correct-4.stderr
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> $DIR/token-error-correct-4.rs:9:12
   |
LL |     setsuna(kazusa();
   |            ^        ^ help: `)` may belong here
   |            |
   |            unclosed delimiter

error: expected expression, found `)`
  --> $DIR/token-error-correct-4.rs:10:1
   |
LL | }
   | ^ expected expression

error: aborting due to 2 previous errors

